refactor: cleanups code